--- a/@sparkservice/pom.xml
+++ b/@sparkservice/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 </project>
