--- a/grapher/pom.xml
+++ b/grapher/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>hbase-client</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
